klar med "forgot password" logiken, behöver hjälp varför det ej funkar

--- a/Fit_Track/View/ForgotPasswordWindow.xaml
+++ b/Fit_Track/View/ForgotPasswordWindow.xaml
@@ -10,8 +10,9 @@
     <Grid Background="Crimson">
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
@@ -21,29 +22,38 @@
         <Label x:Name="lblUsername" Content="Username: " Foreground="LightGray" Height="20" Margin="5"
                FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
 
+        
+        
         <StackPanel Grid.Row="1" VerticalAlignment="Top">
-            <Label x:Name="lblSecurityQuestion" Content="{Binding SecurityQuestion}" Foreground="LightGray" Height="20" Margin="5"
-                    FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Bottom" Visibility="{Binding SecurityVisibility}"/>
-            <Label x:Name="lblNewPassword" Content="New password:" Foreground="LightGray" Height="20" Margin="5"
-                    FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" Visibility="{Binding ForgotPasswordVisibility}"/>
-            <Label x:Name="lblConfirmPassword" Content="Confirm password:" Foreground="LightGray" Height="20" Margin="5"
-                    FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" Visibility="{Binding ForgotPasswordVisibility}"/>
+            <Label x:Name="lblSecurityQuestion" Content="{Binding SecurityQuestion, UpdateSourceTrigger=PropertyChanged, Mode=OneWay}" 
+                   Foreground="LightGray" Height="20" Margin="5" FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" 
+                   VerticalAlignment="Bottom" Visibility="{Binding SecurityVisibility}"/>
         </StackPanel>
 
         <StackPanel Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal"> 
             <TextBox x:Name="txtBoxUsername" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="120" Height="20"
-                 HorizontalAlignment="Left" Margin="5" VerticalAlignment="Bottom"/>
-            <Button x:Name="btnEnter" Content="Enter" Width="120" Height="20"/>
+                     HorizontalAlignment="Left" Margin="5" VerticalAlignment="Bottom"/>
+            <Button x:Name="btnEnter" Content="Enter" Width="120" Height="20" Command="{Binding EnterCommand, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left">
-            <TextBox x:Name="txtBoxSecurityAnswer" Width="120" Height="20" Margin="5" Visibility="{Binding SecurityVisibility}"/>
-            <TextBox x:Name="txtNewPassword" Width="120" Height="20" Margin="5" Visibility="{Binding ForgotPasswordVisibility}"/>
-            <TextBox x:Name="txtBoxConfirmPassword" Width="120" Height="20" Margin="5" Visibility="{Binding ForgotPasswordVisibility}"/>
-            <Button x:Name="btnSave" Content="Save" Width="120" Height="20" Margin="5" Visibility="{Binding ForgotPasswordVisibility}"/>
-
+        <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Orientation="Horizontal">
+            <TextBox x:Name="txtBoxSecurityAnswer" Margin="5" Text="{Binding SecurityAnswer, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                     Visibility="{Binding SecurityVisibility}" Width="120" Height="20"/>
+            <Button x:Name="btnConfirm" Content="Confirm" Width="120" Height="20" Command="{Binding ConfirmCommand, UpdateSourceTrigger=PropertyChanged}"
+                    Visibility="{Binding SecurityVisibility}"/>
         </StackPanel>
-        
 
+        <StackPanel Grid.Row="2" HorizontalAlignment="Right">
+            <Label x:Name="lblNewPassword" Content="New password:" Foreground="LightGray" Height="20" Margin="5"
+                   FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" Visibility="{Binding PasswordVisibility}"/>
+            <Label x:Name="lblConfirmPassword" Content="Confirm password:" Foreground="LightGray" Height="20" Margin="5"
+                   FontSize="8" FontWeight="Bold" HorizontalAlignment="Right" Visibility="{Binding PasswordVisibility}"/>
+        </StackPanel>
+
+        <StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
+            <TextBox x:Name="txtNewPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
+            <TextBox x:Name="txtBoxConfirmPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
+            <Button x:Name="btnSave" Content="Save" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
+        </StackPanel>
     </Grid>
 </Window>
