rätta några småfel

--- a/Fit_Track/View/ForgotPasswordWindow.xaml
+++ b/Fit_Track/View/ForgotPasswordWindow.xaml
@@ -53,7 +53,8 @@
         <StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
             <TextBox x:Name="txtNewPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
             <TextBox x:Name="txtBoxConfirmPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
-            <Button x:Name="btnSave" Content="Save" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
+            <Button x:Name="btnSave" Content="Save" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"
+                    Command="{Binding SaveCommand, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
         </StackPanel>
     </Grid>
 </Window>
