"Forgot Password" funkar

--- a/Fit_Track/View/ForgotPasswordWindow.xaml
+++ b/Fit_Track/View/ForgotPasswordWindow.xaml
@@ -33,14 +33,15 @@
         <StackPanel Grid.Column="1" VerticalAlignment="Bottom" Orientation="Horizontal"> 
             <TextBox x:Name="txtBoxUsername" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" Width="120" Height="20"
                      HorizontalAlignment="Left" Margin="5" VerticalAlignment="Bottom"/>
-            <Button x:Name="btnEnter" Content="Enter" Width="120" Height="20" Command="{Binding EnterCommand, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button x:Name="btnEnter" Content="Enter" Width="120" Height="20" Command="{Binding EnterCommand, UpdateSourceTrigger=PropertyChanged}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Orientation="Horizontal">
             <TextBox x:Name="txtBoxSecurityAnswer" Margin="5" Text="{Binding SecurityAnswer, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                      Visibility="{Binding SecurityVisibility}" Width="120" Height="20"/>
             <Button x:Name="btnConfirm" Content="Confirm" Width="120" Height="20" Command="{Binding ConfirmCommand, UpdateSourceTrigger=PropertyChanged}"
-                    Visibility="{Binding SecurityVisibility}"/>
+                    Visibility="{Binding SecurityVisibility}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
         </StackPanel>
 
         <StackPanel Grid.Row="2" HorizontalAlignment="Right">
@@ -51,10 +52,13 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left">
-            <TextBox x:Name="txtNewPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
-            <TextBox x:Name="txtBoxConfirmPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"/>
+            <TextBox x:Name="txtBoxNewPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"
+                     Text="{Binding NewPassword, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+            <TextBox x:Name="txtBoxConfirmPassword" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"
+                     Text="{Binding ConfirmPassword, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
             <Button x:Name="btnSave" Content="Save" Width="120" Height="20" Margin="5" Visibility="{Binding PasswordVisibility}"
-                    Command="{Binding SaveCommand, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                    Command="{Binding SaveCommand, UpdateSourceTrigger=PropertyChanged}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"/>
         </StackPanel>
     </Grid>
 </Window>
