--- a/Fit_Track/View/WorkoutsWindow.xaml
+++ b/Fit_Track/View/WorkoutsWindow.xaml
@@ -58,6 +58,8 @@
                     Command="{Binding AddWorkoutCommand, UpdateSourceTrigger=PropertyChanged}"/>
             <Button x:Name="btnRemoveWorkout" Content="Remove workout" HorizontalAlignment="Right" Height="30" Width="130" Margin="5" 
                     Command="{Binding RemoveWorkoutCommand, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button x:Name="btnCopyWorkout" Content="Copy workout" HorizontalAlignment="Right" Height="30" Width="130" Margin="5" 
+                    Command="{Binding CopyWorkoutCommand, UpdateSourceTrigger=PropertyChanged}"/>
             <Button x:Name="btnWorkoutDetails" Content="Workout details" HorizontalAlignment="Right" Height="30" Width="130" Margin="5" 
                     Command="{Binding WorkoutDetailsCommand, UpdateSourceTrigger=PropertyChanged}"/>
             <Button x:Name="btnUserDetails" Content="{Binding Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
